# kamodoro

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Timer.cpp  Timer.hpp  main.cpp
test/: CMakeLists.txt  TimerTest.cpp  main.cpp
